@@ -283,6 +283,7 @@ This must be called before <a href=#set_mode>pygame.display.set_mode()</a>
 <br>&nbsp;<br>
 The OPENGL flags are; GL_ALPHA_SIZE, GL_DEPTH_SIZE, GL_STENCIL_SIZE,
 GL_ACCUM_RED_SIZE, GL_ACCUM_GREEN_SIZE, GL_ACCUM_BLUE_SIZE, GL_ACCUM_ALPHA_SIZE
+GL_MULTISAMPLEBUFFERS, GL_MULTISAMPLESAMPLES
 </ul><br>&nbsp;<br>
 
 <a name=iconify><font size=+2><b>iconify
