@@ -162,7 +162,7 @@ static PyObject* get_active(PyObject* self, PyObject* arg)
 
 static void vidinfo_dealloc(PyObject* self)
 {
-	PyObject_DEL(self);	
+	PyObject_DEL(self);
 }
 
 
@@ -206,7 +206,7 @@ static PyObject *vidinfo_getattr(PyObject *self, char *name)
 	else if(!strcmp(name, "losses"))
 		return Py_BuildValue("(iiii)", info->vfmt->Rloss, info->vfmt->Gloss,
 					info->vfmt->Bloss, info->vfmt->Aloss);
-	
+
 	return RAISE(PyExc_AttributeError, "does not exist in vidinfo");
 }
 
@@ -262,7 +262,7 @@ static PyObject* PyVidInfo_New(const SDL_VideoInfo* i)
 	PyVidInfoObject* info;
 
 	if(!i) return RAISE(PyExc_SDLError, SDL_GetError());
-	
+
 	info = PyObject_NEW(PyVidInfoObject, &PyVidInfo_Type);
 	if(!info) return NULL;
 
@@ -313,7 +313,7 @@ static PyObject* set_driver(PyObject* self, PyObject* arg)
 static PyObject* get_driver(PyObject* self, PyObject* args)
 {
 	char buf[256];
-	
+
 	if(!PyArg_ParseTuple(args, ""))
 		return NULL;
 
@@ -390,12 +390,13 @@ static PyObject* get_surface(PyObject* self, PyObject* arg)
     /*DOC*/    "\n"
     /*DOC*/    "The OPENGL flags are; GL_ALPHA_SIZE, GL_DEPTH_SIZE, GL_STENCIL_SIZE,\n"
     /*DOC*/    "GL_ACCUM_RED_SIZE, GL_ACCUM_GREEN_SIZE, GL_ACCUM_BLUE_SIZE, GL_ACCUM_ALPHA_SIZE\n"
+    /*DOC*/    "GL_MULTISAMPLEBUFFERS, GL_MULTISAMPLESAMPLES\n"
     /*DOC*/ ;
 
 static PyObject* gl_set_attribute(PyObject* self, PyObject* arg)
 {
         int flag, value, result;
-    
+
 	VIDEO_INIT_CHECK();
 
     	if(!PyArg_ParseTuple(arg, "ii", &flag, &value))
@@ -404,7 +405,7 @@ static PyObject* gl_set_attribute(PyObject* self, PyObject* arg)
 	result = SDL_GL_SetAttribute(flag, value);
         if(result == -1)
             return RAISE(PyExc_SDLError, SDL_GetError());
-        
+
         RETURN_NONE
 }
 
@@ -428,7 +429,7 @@ static PyObject* gl_set_attribute(PyObject* self, PyObject* arg)
 static PyObject* gl_get_attribute(PyObject* self, PyObject* arg)
 {
         int flag, value, result;
-    
+
 	VIDEO_INIT_CHECK();
 
 	if(!PyArg_ParseTuple(arg, "i", &flag))
@@ -437,12 +438,12 @@ static PyObject* gl_get_attribute(PyObject* self, PyObject* arg)
 	result = SDL_GL_GetAttribute(flag, &value);
         if(result == -1)
             return RAISE(PyExc_SDLError, SDL_GetError());
-        
+
         return PyInt_FromLong(value);
 }
 
 
-            
+
     /*DOC*/ static char doc_set_mode[] =
     /*DOC*/    "pygame.display.set_mode(size, [flags, [depth]]) -> Surface\n"
     /*DOC*/    "set the display mode\n"
@@ -639,7 +640,7 @@ static PyObject* list_modes(PyObject* self, PyObject* args)
 	SDL_Rect** rects;
 	int flags=SDL_FULLSCREEN;
 	PyObject *list, *size;
-	
+
 	format.BitsPerPixel = 0;
 	if(PyTuple_Size(args)!=0 && !PyArg_ParseTuple(args, "|bi", &format.BitsPerPixel, &flags))
 		return NULL;
@@ -764,7 +765,7 @@ static PyObject* update(PyObject* self, PyObject* arg)
 	high = screen->h;
 	if(screen->flags & SDL_OPENGL)
 		return RAISE(PyExc_SDLError, "Cannot update an OPENGL display");
-        
+
 	/*determine type of argument we got*/
 	if(PyTuple_Size(arg) == 0)
         {
@@ -807,7 +808,7 @@ static PyObject* update(PyObject* self, PyObject* arg)
                 seq = PyTuple_GET_ITEM(arg, 0);
                 if(!seq || !PySequence_Check(seq))
                         return RAISE(PyExc_ValueError, "update requires a rectstyle or sequence of recstyles");
-        
+
                 num = PySequence_Length(seq);
                 rects = PyMem_New(SDL_Rect, num);
                 if(!rects) return NULL;
@@ -815,7 +816,7 @@ static PyObject* update(PyObject* self, PyObject* arg)
                 for(loop = 0; loop < num; ++loop)
                 {
                         GAME_Rect* cur_rect = (GAME_Rect*)(rects + count);
-        
+
                         /*get rect from the sequence*/
                         r = PySequence_GetItem(seq, loop);
                         if(r == Py_None)
@@ -830,17 +831,17 @@ static PyObject* update(PyObject* self, PyObject* arg)
                                 PyMem_Free((char*)rects);
                                 return RAISE(PyExc_ValueError, "update_rects requires a single list of rects");
                         }
-                        
+
                         if(gr->w < 1 && gr->h < 1)
                                 continue;
-        
+
                         /*bail out if rect not onscreen*/
                         if(!screencroprect(gr, wide, high, cur_rect))
                                 continue;
-        
+
                         ++count;
                 }
-        
+
                 if(count)
                     SDL_UpdateRects(screen, count, rects);
                 PyMem_Free((char*)rects);
@@ -873,7 +874,7 @@ static PyObject* set_palette(PyObject* self, PyObject* args)
 	PyObject* list, *item = NULL;
 	int i, len;
 	short r, g, b;
-	
+
 	VIDEO_INIT_CHECK();
 	if(!PyArg_ParseTuple(args, "|O", &list))
 		return NULL;
@@ -891,8 +892,8 @@ static PyObject* set_palette(PyObject* self, PyObject* args)
 		SDL_SetPalette(surf, SDL_PHYSPAL, colors, 0, len);
 		RETURN_NONE
 	}
-	
-	
+
+
 	if(!PySequence_Check(list))
 		return RAISE(PyExc_ValueError, "Argument must be a sequence type");
 
@@ -901,7 +902,7 @@ static PyObject* set_palette(PyObject* self, PyObject* args)
 	colors = (SDL_Color*)malloc(len * sizeof(SDL_Color));
 	if(!colors)
 		return NULL;
-	
+
 	for(i = 0; i < len; i++)
 	{
 		item = PySequence_GetItem(list, i);
@@ -918,7 +919,7 @@ static PyObject* set_palette(PyObject* self, PyObject* args)
 		colors[i].r = (unsigned char)r;
 		colors[i].g = (unsigned char)g;
 		colors[i].b = (unsigned char)b;
-	
+
 		Py_DECREF(item);
 	}
 
@@ -1008,7 +1009,7 @@ static PyObject* set_gamma_ramp(PyObject* self, PyObject* arg)
  	Uint16 *r, *g, *b;
 
 	int result;
- 
+
 	r = (Uint16 *)malloc(256 * sizeof(Uint16));
 	if (!r)
 	        return NULL;
@@ -1026,7 +1027,7 @@ static PyObject* set_gamma_ramp(PyObject* self, PyObject* arg)
 	        return NULL;
         }
 
-	if(!PyArg_ParseTuple(arg, "O&O&O&", 
+	if(!PyArg_ParseTuple(arg, "O&O&O&",
 			     convert_to_uint16, r,
 			     convert_to_uint16, g,
 			     convert_to_uint16, b))
@@ -1036,7 +1037,7 @@ static PyObject* set_gamma_ramp(PyObject* self, PyObject* arg)
         }
 
         VIDEO_INIT_CHECK();
-	
+
 	result = SDL_SetGammaRamp(r, g, b);
 
 	free((char*)r);
@@ -1088,7 +1089,7 @@ static PyObject* get_caption(PyObject* self, PyObject* arg)
 		return NULL;
 
 	SDL_WM_GetCaption(&title, &icontitle);
-	
+
 	if(title && *title)
 		return Py_BuildValue("(ss)", title, icontitle);
 
